fix overflow in board

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     width: 1300px;
     display: flex;
     position: relative;
+    justify-content: center;
 }
 #caja-1{
     height: 504px;
